grammar.txt
program        → statement* EOF ;

statement      → varDecl
               | assignment
               | printStmt
               | inputStmt
               | ifStmt
               | whileStmt
               | block ;

varDecl        → "let" IDENTIFIER "=" expression ";" ;

assignment     → IDENTIFIER "=" expression ";" ;

printStmt      → "print" "(" expression ")" ";" ;

inputStmt      → "input" "(" IDENTIFIER ")" ";" ;

ifStmt         → "if" "(" expression ")" block ;

whileStmt      → "while" "(" expression ")" block ;

block          → "{" statement* "}" ;

expression     → equality ;

equality       → comparison (("==") comparison)* ;

comparison     → term ((">" | "<" | ">=" | "<=") term)* ;

term           → factor (("+" | "-") factor)* ;

factor         → unary (("*" | "/") unary)* ;

unary          → ("-" unary)
               | primary ;

primary        → NUMBER
               | IDENTIFIER
               | TRUE
               | FALSE
               | "(" expression ")" ;
